force-app/main/default/objects/leaseworks__Package_Script_History__c/leaseworks__Package_Script_History__c.object-meta.xml
<CustomObject>
    <label>Package Script Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Script Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>