force-app/main/default/objects/leaseworks__Package_Script_History__c/fields/leaseworks__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>