force-app/main/default/objects/leaseworks__Package_Script_History__c/fields/leaseworks__Description__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Description__c</fullName>
    <description>This field holds the description about the script</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>