force-app/main/default/objects/leaseworks__Package_Script_History__c/fields/leaseworks__Executed_Package_Version__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Executed_Package_Version__c</fullName>
    <description>Last executed package version</description>
    <label>Executed Package Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>