force-app/main/default/objects/leaseworks__Package_Script_History__c/fields/leaseworks__Script_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Script_Name__c</fullName>
    <label>Script Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>